--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
   app: "docker"
-  env: ""
+  env: "Docker-env"
   bucket_name: "elasticbeanstalk-us-east-1-426643987614"
   bucket_path: "docker"
   on:
